packages/bpk-component-navigation-bar/src/BpkNavigationBar.module.scss
/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use '../../bpk-mixins/tokens';
@use '../../bpk-mixins/shadows';
@use '../../bpk-mixins/utils';
@use '../../bpk-mixins/typography';

.bpk-navigation-bar {
  position: relative;
  display: grid;
  min-height: tokens.bpk-spacing-xl() + tokens.bpk-spacing-lg();
  padding: tokens.bpk-spacing-base();
  grid-template-rows: auto;

  // 3 columns allowing for buttons at either side and a title then taking the available space in between
  // min sizes to preserve margins when buttons omitted and ensure some text still shown under extreme zoom
  grid-template-columns:
    minmax(tokens.bpk-spacing-lg(), auto) minmax(tokens.bpk-spacing-base(), 1fr)
    minmax(tokens.bpk-spacing-lg(), auto);
  justify-content: space-between;
  align-items: center;
  gap: tokens.bpk-spacing-base();

  @include utils.bpk-themeable-property(
    background-color,
    --bpk-navigation-bar-background-color,
    tokens.$bpk-surface-default-day
  );

  &--on-dark {
    background-color: tokens.$bpk-surface-contrast-day;
  }

  &__title {
    grid-column: 2;
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;

    @include utils.bpk-themeable-property(
      color,
      --bpk-navigation-bar-title-color,
      tokens.$bpk-text-primary-day
    );

    // ensure we still apply ellipsis overflow when a custom title element is specified e.g. h2
    :first-child {
      display: inline;
    }

    &--on-dark {
      color: tokens.$bpk-text-primary-inverse-day;
    }
  }

  &__title-container {
    justify-self: center;
  }

  &__leading-item,
  &__trailing-item {
    @include typography.bpk-label-2;
  }

  &__leading-item {
    grid-column: 1;
    justify-self: start;
  }

  &__trailing-item {
    grid-column: 3;
    justify-self: end;
  }

  &__sticky {
    position: sticky;
    top: 0;
    z-index: tokens.$bpk-zindex-tooltip - 1; // Allow tooltips/modals/... to be displayed above the navigation bar

    @include shadows.bpk-box-shadow-sm;
  }
}

